# statens-utgifter

./: budget.2025-2029.csv  budget.2025-2029.ipynb  pyproject.toml  årsutfall.1997-2024.heatmap.ipynb  årsutfall.1997-2024.ipynb
output/: 1997-2024.txt
