[project]
name = "statens-utgifter"
version = "0.1.0"
description = ""
authors = [
    {name = "Nizo",email = "nizo@example.com"}
]
requires-python = "^3.14"
dependencies = [
    "ipykernel (>=7.3.0,<8.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "pandas-stubs (>=3.0.3,<3.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
